<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <TextView
        android:id="@+id/introContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:lineSpacingExtra="2.5dp"
        android:text="@string/customFragment"
        android:textSize="14sp"
        android:textColor="#FFF"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/onFeature"
        android:id="@+id/textView"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginTop="45dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        android:id="@+id/view">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp">
<ImageView
    android:layout_width="22dp"
    android:layout_height="22dp"
    android:id="@+id/imageView"
    android:background="@drawable/checkbox"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="15dp"
    android:text="@string/firstFeature"
    android:id="@+id/textView2"
    android:fontFamily="sans-serif-condensed"
    android:layout_alignBottom="@+id/imageView"
    android:layout_toRightOf="@+id/imageView"
    android:layout_toEndOf="@+id/imageView" />

<ImageView
    android:layout_width="22dp"
    android:layout_height="22dp"
    android:id="@+id/imageView2"
    android:background="@drawable/checkbox"
    android:layout_marginTop="33dp"
    android:layout_below="@+id/imageView"
    android:layout_alignLeft="@+id/imageView"
    android:layout_alignStart="@+id/imageView" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="15dp"
    android:text="@string/secondFeature"
    android:fontFamily="sans-serif-condensed"
    android:id="@+id/textView3"
    android:layout_alignTop="@+id/imageView2"
    android:layout_toRightOf="@+id/imageView2"
    android:layout_toEndOf="@+id/imageView2" />

<ImageView
    android:layout_width="22dp"
    android:layout_height="22dp"
    android:id="@+id/imageView3"
    android:background="@drawable/checkbox"
    android:layout_marginTop="36dp"
    android:layout_below="@+id/imageView2"
    android:layout_toLeftOf="@+id/textView3"
    android:layout_toStartOf="@+id/textView3" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="15dp"
    android:text="@string/thirdFeature"
    android:fontFamily="sans-serif-condensed"
    android:id="@+id/textView4"
    android:layout_alignBottom="@+id/imageView3"
    android:layout_toRightOf="@+id/imageView3"
    android:layout_toEndOf="@+id/imageView3" />

<ImageView
    android:layout_width="22dp"
    android:layout_height="22dp"
    android:id="@+id/imageView4"
    android:background="@drawable/checkbox"
    android:layout_below="@+id/imageView3"
    android:layout_alignLeft="@+id/imageView3"
    android:layout_alignStart="@+id/imageView3"
    android:layout_marginTop="34dp" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="15dp"
    android:text="@string/fourthFeature"
    android:fontFamily="sans-serif-condensed"
    android:id="@+id/textView6"
    android:layout_alignTop="@+id/imageView4"
    android:layout_toRightOf="@+id/imageView4"
    android:layout_toEndOf="@+id/imageView4" />
    </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>